tests/snapshots/golden__empty.snap
---
source: tests/golden.rs
description: Empty stdin → empty stdout.
expression: visualize(&output)
---

