tests/snapshots/golden__hidden.snap
---
source: tests/golden.rs
description: Hidden (abandoned) revisions in the log.
expression: visualize(&output)
---
\e[1m\e[38;5;2m□\e[0m\e[38;5;240m╶──╴\e[39m\e[1m\e[38;5;13mp\e[38;5;8mslyzk\e[39m\e[38;5;240m╶─╴\e[39m\e[38;5;12m7\e[38;5;8m12e19\e[39m \e[38;5;3mTU\e[39m \e[38;5;14m260509·1436\e[39m \e[38;5;10m\e[3m\e[38;5;8mno description\e[23m\e[39m\e[0m
\e[38;5;240m𜸩\e[39m \e[38;5;245m\e[39m\e[38;5;240m╶╴\e[39m\e[1m\e[39mr\e[0m\e[38;5;8mxpwnq\e[1m\e[39m/0\e[0m \e[1m\e[38;5;4m72\e[0m\e[38;5;8m025f\e[39m \e[38;5;3mTU\e[39m \e[38;5;6m260509·1436\e[39m 𝙃 abandoned commit
\e[38;5;240m𜸨\e[39m\e[38;5;240m𜸟\e[39m\e[38;5;240m𜹃\e[39m
\e[38;5;240m𜸩\e[39m \e[1m\e[38;5;1m\e[0m\e[38;5;240m╶╴\e[39m\e[1m\e[38;5;5mxsp\e[0m\e[38;5;8mpxl\e[39m\e[38;5;240m╶─╴\e[39m\e[1m\e[38;5;4ma\e[0m\e[38;5;8m22667\e[39m \e[38;5;3mTU\e[39m \e[38;5;6m260509·1436\e[39m \e[38;5;5mside\e[39m side conflict edit
\e[38;5;240m𜸨\e[39m\e[38;5;240m𜸟\e[39m\e[38;5;240m𜹃\e[39m
\e[38;5;245m\e[39m\e[38;5;240m╶──╴\e[39m\e[1m\e[38;5;5mw\e[0m\e[38;5;8mosytr\e[39m\e[38;5;240m╶─╴\e[39m\e[1m\e[38;5;4m9\e[0m\e[38;5;8m12122\e[39m \e[38;5;3mTU\e[39m \e[38;5;6m260509·1436\e[39m \e[38;5;5mmain\e[39m main: edit shared
\e[38;5;245m\e[39m\e[38;5;240m╶──╴\e[39m\e[1m\e[38;5;5mxsn\e[0m\e[38;5;8mkqp\e[39m\e[38;5;240m╶─╴\e[39m\e[1m\e[38;5;4m4\e[0m\e[38;5;8m8a20a\e[39m \e[38;5;3mTU\e[39m \e[38;5;6m260509·1436\e[39m base: shared file
\e[0m\e[38;5;245m\e[39m\e[0m\e[38;5;240m╶──╴\e[39m\e[1m\e[38;5;5mz\e[0m\e[38;5;8mzzzzz\e[39m\e[38;5;240m╶─╴\e[39m\e[38;5;2mroot()\e[39m \e[1m\e[38;5;4m0\e[0m\e[38;5;8m00000\e[39m
