tests/snapshots/golden__hydra.snap
---
source: tests/golden.rs
description: "tests/fixtures/hydra.txt: top-stack padding row plus hashed per-stack node and bookmark colors."
expression: "render_fixture_with(\"hydra.txt\", &HYDRA_ENV)"
---
\e[1m\e[38;2;156;224;92m□\e[39m\e[0m\e[38;5;8m╶── \e[39m\e[1m\e[38;5;5mqm\e[0m\e[38;5;8mqnuu\e[39m \e[1m\e[38;5;4md2\e[0m\e[38;5;8mea23\e[39m \e[38;2;255;199;83mME\e[39m \e[38;5;6m260915·2226\e[39m \e[38;2;156;224;92mHYWC-delta\e[39m hydra working copy delta
\e[38;5;8m𜸩\e[39m\e[38;2;222;92;224m\e[39m\e[38;5;8m╶─ \e[39m\e[1m\e[38;5;5mo\e[0m\e[38;5;8mvpuoz\e[39m \e[1m\e[38;5;4m59\e[0m\e[38;5;8m3954\e[39m \e[38;2;255;199;83mME\e[39m \e[38;5;6m260915·2226\e[39m \e[38;2;222;92;224mHYWC-gamma\e[39m hydra working copy gamma
\e[38;5;8m𜸨\e[39m\e[38;5;8m𜹃\e[39m
\e[38;5;8m𜸩\e[39m\e[38;2;92;224;136m\e[39m\e[38;5;8m╶─ \e[39m\e[1m\e[38;5;5msz\e[0m\e[38;5;8mrvoy\e[39m \e[1m\e[38;5;4m44\e[0m\e[38;5;8m5197\e[39m \e[38;2;255;199;83mME\e[39m \e[38;5;6m260915·2226\e[39m \e[38;2;92;224;136mHYWC-beta\e[39m hydra working copy beta
\e[38;5;8m𜸨\e[39m\e[38;5;8m𜹃\e[39m
\e[38;5;8m𜸩\e[39m\e[38;2;178;224;92m\e[39m\e[38;5;8m╶─ \e[39m\e[1m\e[38;5;5muql\e[0m\e[38;5;8myrp\e[39m \e[1m\e[38;5;4mf8\e[0m\e[38;5;8mca31\e[39m \e[38;2;255;199;83mME\e[39m \e[38;5;6m260915·2226\e[39m \e[38;2;178;224;92mHYWC-alpha\e[39m hydra working copy alpha
\e[38;5;8m𜸨\e[39m\e[38;5;8m𜹃\e[39m
\e[38;5;8m\e[38;5;8m╶── \e[39m\e[1m\e[38;5;5msv\e[0m\e[38;5;8mmzur\e[39m \e[1m\e[38;5;4m1\e[0m\e[38;5;8m910fe\e[39m \e[38;2;255;199;83mME\e[39m \e[38;5;6m260915·2226\e[39m \e[38;5;5mHYH\e[39m hydra head
\e[38;5;8m𜸨\e[39m\e[38;5;8m𜸠\e[39m\e[38;5;8m𜸠\e[39m\e[38;5;8m𜸤\e[39m
\e[38;5;8m𜸩\e[39m\e[38;5;8m𜸩\e[39m\e[38;5;8m𜸩\e[39m\e[38;2;156;224;92m\e[39m \e[1m\e[38;5;5mym\e[0m\e[38;5;8mopyy\e[39m \e[1m\e[38;5;4m6\e[0m\e[38;5;8med16b\e[39m \e[38;2;255;199;83mME\e[39m \e[38;5;6m260915·2226\e[39m \e[38;2;156;224;92mHYS-delta\e[39m hydra stack delta
\e[38;5;8m𜸩\e[39m\e[38;5;8m𜸩\e[39m\e[38;5;8m𜸩\e[39m\e[38;2;156;224;92m●\e[39m \e[1m\e[38;5;5myk\e[0m\e[38;5;8mknyr\e[39m \e[1m\e[38;5;4m8\e[0m\e[38;5;8m27dad\e[39m \e[38;2;255;199;83mME\e[39m \e[38;5;6m260915·2226\e[39m feat(delta): step 3
\e[38;5;8m𜸩\e[39m\e[38;5;8m𜸩\e[39m\e[38;5;8m𜸩\e[39m\e[38;2;156;224;92m●\e[39m \e[1m\e[38;5;5mkxl\e[0m\e[38;5;8mwwo\e[39m \e[1m\e[38;5;4me\e[0m\e[38;5;8m0d26c\e[39m \e[38;2;255;199;83mME\e[39m \e[38;5;6m260915·2226\e[39m feat(delta): step 2
\e[38;5;8m𜸩\e[39m\e[38;5;8m𜸩\e[39m\e[38;5;8m𜸩\e[39m\e[38;2;156;224;92m●\e[39m \e[1m\e[38;5;5mr\e[0m\e[38;5;8mxxuqn\e[39m \e[1m\e[38;5;4ma\e[0m\e[38;5;8m91026\e[39m \e[38;2;255;199;83mME\e[39m \e[38;5;6m260915·2226\e[39m feat(delta): step 1
\e[38;5;8m𜸩\e[39m\e[38;5;8m𜸩\e[39m\e[38;5;8m𜸩\e[39m\e[38;5;8m𜸩\e[39m
\e[38;5;8m𜸩\e[39m\e[38;5;8m𜸩\e[39m\e[38;2;222;92;224m\e[39m\e[38;5;8m𜸩\e[39m \e[1m\e[38;5;5mzq\e[0m\e[38;5;8mzvms\e[39m \e[1m\e[38;5;4m08\e[0m\e[38;5;8m5dd3\e[39m \e[38;2;255;199;83mME\e[39m \e[38;5;6m260915·2226\e[39m \e[38;2;222;92;224mHYS-gamma\e[39m hydra stack gamma
\e[38;5;8m𜸩\e[39m\e[38;5;8m𜸩\e[39m\e[38;2;222;92;224m●\e[39m\e[38;5;8m𜸩\e[39m \e[1m\e[38;5;5mwmk\e[0m\e[38;5;8myus\e[39m \e[1m\e[38;5;4m46\e[0m\e[38;5;8m0a51\e[39m \e[38;2;255;199;83mME\e[39m \e[38;5;6m260915·2226\e[39m feat(gamma): step 3
\e[38;5;8m𜸩\e[39m\e[38;5;8m𜸩\e[39m\e[38;2;222;92;224m●\e[39m\e[38;5;8m𜸩\e[39m \e[1m\e[38;5;5mp\e[0m\e[38;5;8mvomwk\e[39m \e[1m\e[38;5;4mbd\e[0m\e[38;5;8m5a7a\e[39m \e[38;2;255;199;83mME\e[39m \e[38;5;6m260915·2226\e[39m feat(gamma): step 2
\e[38;5;8m𜸩\e[39m\e[38;5;8m𜸩\e[39m\e[38;2;222;92;224m●\e[39m\e[38;5;8m𜸩\e[39m \e[1m\e[38;5;5mzzn\e[0m\e[38;5;8mqwr\e[39m \e[1m\e[38;5;4m36\e[0m\e[38;5;8m3c82\e[39m \e[38;2;255;199;83mME\e[39m \e[38;5;6m260915·2226\e[39m feat(gamma): step 1
\e[38;5;8m𜸩\e[39m\e[38;5;8m𜸩\e[39m\e[38;5;8m𜸨\e[39m\e[38;5;8m𜹃\e[39m
\e[38;5;8m𜸩\e[39m\e[38;2;92;224;136m\e[39m\e[38;5;8m𜸩\e[39m\e[38;5;8m─ \e[39m\e[1m\e[38;5;5mqw\e[0m\e[38;5;8mzprp\e[39m \e[1m\e[38;5;4m2\e[0m\e[38;5;8m25c31\e[39m \e[38;2;255;199;83mME\e[39m \e[38;5;6m260915·2226\e[39m \e[38;2;92;224;136mHYS-beta\e[39m hydra stack beta
\e[38;5;8m𜸩\e[39m\e[38;2;92;224;136m●\e[39m\e[38;5;8m𜸩\e[39m\e[38;5;8m─ \e[39m\e[1m\e[38;5;5mkxp\e[0m\e[38;5;8monx\e[39m \e[1m\e[38;5;4md7\e[0m\e[38;5;8m63a6\e[39m \e[38;2;255;199;83mME\e[39m \e[38;5;6m260915·2226\e[39m feat(beta): step 3
\e[38;5;8m𜸩\e[39m\e[38;2;92;224;136m●\e[39m\e[38;5;8m𜸩\e[39m\e[38;5;8m─ \e[39m\e[1m\e[38;5;5mwmx\e[0m\e[38;5;8mprx\e[39m \e[1m\e[38;5;4m3c\e[0m\e[38;5;8m8ef1\e[39m \e[38;2;255;199;83mME\e[39m \e[38;5;6m260915·2226\e[39m feat(beta): step 2
\e[38;5;8m𜸩\e[39m\e[38;2;92;224;136m●\e[39m\e[38;5;8m𜸩\e[39m\e[38;5;8m─ \e[39m\e[1m\e[38;5;5mt\e[0m\e[38;5;8mwxkvp\e[39m \e[1m\e[38;5;4m0b\e[0m\e[38;5;8m4603\e[39m \e[38;2;255;199;83mME\e[39m \e[38;5;6m260915·2226\e[39m feat(beta): step 1
\e[38;5;8m𜸩\e[39m\e[38;5;8m𜸨\e[39m\e[38;5;8m𜹃\e[39m
\e[38;2;178;224;92m\e[39m\e[38;5;8m𜸩\e[39m\e[38;5;8m── \e[39m\e[1m\e[38;5;5mut\e[0m\e[38;5;8mlplk\e[39m \e[1m\e[38;5;4mf7\e[0m\e[38;5;8m976a\e[39m \e[38;2;255;199;83mME\e[39m \e[38;5;6m260915·2226\e[39m \e[38;2;178;224;92mHYS-alpha\e[39m hydra stack alpha
\e[38;2;178;224;92m●\e[39m\e[38;5;8m𜸩\e[39m\e[38;5;8m── \e[39m\e[1m\e[38;5;5mko\e[0m\e[38;5;8mvyqv\e[39m \e[1m\e[38;5;4m58\e[0m\e[38;5;8m150e\e[39m \e[38;2;255;199;83mME\e[39m \e[38;5;6m260915·2226\e[39m feat(alpha): step 3
\e[38;2;178;224;92m●\e[39m\e[38;5;8m𜸩\e[39m\e[38;5;8m── \e[39m\e[1m\e[38;5;5muqy\e[0m\e[38;5;8mpmr\e[39m \e[1m\e[38;5;4mb9\e[0m\e[38;5;8m950a\e[39m \e[38;2;255;199;83mME\e[39m \e[38;5;6m260915·2226\e[39m feat(alpha): step 2
\e[38;2;178;224;92m●\e[39m\e[38;5;8m𜸩\e[39m\e[38;5;8m── \e[39m\e[1m\e[38;5;5mky\e[0m\e[38;5;8mtutl\e[39m \e[1m\e[38;5;4m9\e[0m\e[38;5;8m5a227\e[39m \e[38;2;255;199;83mME\e[39m \e[38;5;6m260915·2226\e[39m feat(alpha): step 1
\e[38;5;8m𜸨\e[39m\e[38;5;8m𜹃\e[39m
\e[38;5;8m𜸩\e[39m\e[38;5;8m●\e[38;5;8m╶─ \e[39m\e[1m\e[38;5;5mlw\e[0m\e[38;5;8mrtuv\e[39m \e[1m\e[38;5;4mbe\e[0m\e[38;5;8m9a76\e[39m \e[38;2;255;199;83mME\e[39m \e[38;5;6m260915·2226\e[39m a head off the base, in no stack
\e[38;5;8m𜸨\e[39m\e[38;5;8m𜹃\e[39m
\e[38;5;8m●\e[38;5;8m╶── \e[39m\e[1m\e[38;5;5ml\e[0m\e[38;5;8muoups\e[39m \e[1m\e[38;5;4mc\e[0m\e[38;5;8m92646\e[39m \e[38;2;255;199;83mME\e[39m \e[38;5;6m260915·2226\e[39m \e[38;5;5mHYB main\e[39m Update A
\e[38;5;8m  root\x00\e[1m\e[38;5;5mzzz\e[0m\e[38;5;8mzzz\e[39m \e[38;5;2mroot()\e[39m \e[1m\e[38;5;4m00\e[0m\e[38;5;8m0000\e[39m
   \x1e
