tests/snapshots/golden__merge_graph.snap
---
source: tests/golden.rs
description: Two-parent merge — covers tee_up and bottom-corner edges.
expression: visualize(&output)
---
\e[1m\e[38;5;2m\e[0m \e[38;5;8m··\e[39m \e[1m\e[38;5;13mx\e[38;5;8mrmrzn\e[39m \e[38;5;12m77\e[38;5;8me2c2\e[39m \e[38;2;255;199;83mME\e[39m \e[38;5;14m260509·1007\e[39m \e[38;5;10m\e[39mmerge two heads\e[0m
\e[38;5;240m𜸨\e[39m\e[38;5;240m𜸟\e[39m\e[38;5;240m𜸤\e[39m
\e[38;5;240m𜸩\e[39m \e[38;5;245m\e[39m  \e[1m\e[38;5;5mu\e[0m\e[38;5;8mpvwzo\e[39m \e[1m\e[38;5;4m42\e[0m\e[38;5;8m77f5\e[39m \e[38;2;255;199;83mME\e[39m \e[38;5;6m260509·1007\e[39m second
\e[38;5;245m\e[39m \e[38;5;240m𜸩\e[39m  \e[1m\e[38;5;5mt\e[0m\e[38;5;8myvwoy\e[39m \e[1m\e[38;5;4mc\e[0m\e[38;5;8md5b3c\e[39m \e[38;2;255;199;83mME\e[39m \e[38;5;6m260509·1007\e[39m \e[38;5;2m\e[3m\e[38;5;8mno description\e[23m\e[39m
\e[38;5;245m\e[39m \e[38;5;240m𜸩\e[39m  \e[1m\e[38;5;5mn\e[0m\e[38;5;8mvnoxs\e[39m \e[1m\e[38;5;4m4c\e[0m\e[38;5;8m3cd2\e[39m \e[38;2;255;199;83mME\e[39m \e[38;5;6m260509·1007\e[39m side commit
\e[38;5;240m𜸨\e[39m\e[38;5;240m𜸟\e[39m\e[38;5;240m𜹃\e[39m
\e[38;5;245m\e[39m \e[38;5;8m··\e[39m \e[1m\e[38;5;5ml\e[0m\e[38;5;8mllmup\e[39m \e[1m\e[38;5;4m7b\e[0m\e[38;5;8m0dd3\e[39m \e[38;2;255;199;83mME\e[39m \e[38;5;6m260509·1007\e[39m first
\e[0m\e[38;5;245m\e[39m\e[0m \e[38;5;8m··\e[39m \e[1m\e[38;5;5mz\e[0m\e[38;5;8mzzzzz\e[39m \e[38;5;2mroot()\e[39m \e[1m\e[38;5;4m0\e[0m\e[38;5;8m00000\e[39m
