tests/snapshots/golden__plain_text.snap
---
source: tests/golden.rs
description: Input with no graph chars — must passthrough unchanged.
expression: visualize(&output)
---
 src/main.rs
 tests/golden.rs
